Fixed project image margin on mobile

--- a/css/media.css
+++ b/css/media.css
@@ -37,12 +37,33 @@
         background-attachment: initial;
     }
 
-    .section{
+    
+    .content__col-mr{
+        margin-right: initial;
+    }
+    
+    .content--padded{
+        padding-top: initial;
+    }
+
+    .main-content--mobile-padding{
         padding-top: 6rem;
     }
 }
 
 @media (max-device-height: 915px) and (orientation: landscape){
+
+    .content--padded{
+        padding-top: initial;
+    }
+
+    .main-content--mobile-padding{
+        padding-top: 6rem;
+    }
+
+    .content__col-mr{
+        margin-right: initial;
+    }
     
     .background-one{  
         background-attachment: initial;
@@ -92,8 +113,18 @@
         /* background-image: linear-gradient(45deg, #6188d8 0px, #ab47bc 600px); */
     }
 
+}
 
-    .section{
-        padding-top: 6rem;
+
+@media screen and (orientation: portrait){
+    .main-content--landscape-col{
+        flex-direction: column;
+        padding-left: 10%;
+        padding-right: 10%;
+        padding-top: initial;
+        justify-content: center;
+    }
+    .content{
+        width: auto;
     }
 }
